@@ -1,22 +1,15 @@
 package calocheck.boundedContext.photo.service;
 
 import calocheck.base.rsData.RsData;
-import calocheck.boundedContext.photo.config.S3Config;
-import com.amazonaws.auth.AWSStaticCredentialsProvider;
-import com.amazonaws.auth.BasicAWSCredentials;
-import com.amazonaws.client.builder.AwsClientBuilder;
+import calocheck.boundedContext.photo.config.S3ConfigProperties;
 import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.AmazonS3ClientBuilder;
 import com.amazonaws.services.s3.model.CannedAccessControlList;
 import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.amazonaws.services.s3.model.PutObjectRequest;
-import com.amazonaws.services.s3.model.PutObjectResult;
 import com.google.cloud.vision.v1.*;
 import com.google.protobuf.ByteString;
-import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.io.IOUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
@@ -34,22 +27,9 @@ import java.util.UUID;
 @Service
 public class PhotoService {
 
-    @Autowired
-    private HttpServletRequest request;
-
-    final String endPoint = S3Config.getEndPoint();
-    final String regionName = S3Config.getRegion();
-    final String accessKey = S3Config.getAccessKey();
-    final String secretKey = S3Config.getSecretKey();
-
-
-    // S3 client
-    final AmazonS3 s3 = AmazonS3ClientBuilder.standard()
-            .withEndpointConfiguration(new AwsClientBuilder.EndpointConfiguration(endPoint, regionName))
-            .withCredentials(new AWSStaticCredentialsProvider(new BasicAWSCredentials(accessKey, secretKey)))
-            .build();
-
-    String bucketName = S3Config.getBucket();
+    private final S3ConfigProperties s3ConfigProperties;
+    private final ImageAnnotatorSettings visionAPISettings;
+    private final AmazonS3 amazonS3;
 
     // upload local file
     @Transactional
@@ -68,10 +48,13 @@ public class PhotoService {
 
         InputStream inputStream = file.getInputStream();
 
-        PutObjectResult putObjectResult = s3.putObject(new PutObjectRequest(bucketName, key, inputStream, objectMetadata)
+        String bucketName = s3ConfigProperties.getBucket();
+        String endPoint = s3ConfigProperties.getEndPoint();
+
+        amazonS3.putObject(new PutObjectRequest(bucketName, key, inputStream, objectMetadata)
                 .withCannedAcl(CannedAccessControlList.PublicRead));
 
-        return String.format("https://kr.object.ncloudstorage.com/%s/%s", bucketName, key);
+        return endPoint + "/%s/%s".formatted(bucketName, key);
     }
 
     public RsData<String> isImgFile(String fileName) {
@@ -91,139 +74,88 @@ public class PhotoService {
 
     }
 
-    //이미지의 라벨 검출
-//    public RsData<String> detectLabelsRemote(String imageUrl) throws IOException {
-//
-//        try (ImageAnnotatorClient vision = ImageAnnotatorClient.create()) {
-//
-//            // 원격 저장소(NCP Object Storage)의 URL 사용하여 이미지 데이터를 읽어옴
-//            URL url = new URL(imageUrl);
-//            try (InputStream in = url.openStream()) {
-//                byte[] data = IOUtils.toByteArray(in);
-//
-//                //URL 을 통해 이미지를 빌드
-//                ByteString imgBytes = ByteString.copyFrom(data);
-//                Image img = Image.newBuilder().setContent(imgBytes).build();
-//                Feature feat = Feature.newBuilder().setType(Feature.Type.LABEL_DETECTION).build();
-//                AnnotateImageRequest request =
-//                        AnnotateImageRequest.newBuilder().addFeatures(feat).setImage(img).build();
-//
-//                // Label 검출
-//                BatchAnnotateImagesResponse response = vision.batchAnnotateImages(
-//                        Collections.singletonList(request));
-//                List<AnnotateImageResponse> responses = response.getResponsesList();
-//
-//                for (AnnotateImageResponse res : responses) {
-//                    if (res.hasError()) {
-//                        System.out.format("Error: %s%n", res.getError().getMessage());
-//                        return RsData.of("F-1", "라벨 검출도중 오류가 발생하였습니다.");
-//                    }
-//
-//                    for (EntityAnnotation annotation : res.getLabelAnnotationsList()) {
-////                        annotation.getAllFields().forEach((k, v) ->
-////                                System.out.format("%s : %s%n", k, v.toString()));
-//
-//                        //검출 결과 중에서 음식일 확률이 70% 이상이라면 바로 리턴 후 종료 -> true 반환
-//                        if (annotation.getDescription().contains("Food") && annotation.getScore() >= 0.7) {
-//                            return RsData.of("S-1", "음식 이미지일 확률이 높습니다.");
-//                        }
-//                    }
-//                }
-//            }
-//        }
-//        return RsData.of("F-1", "음식 이미지가 아닙니다.");
-//    }
+    // labelDetection + safeSearch
+    public RsData<String> imageCheck(String imageUrl) throws IOException {
 
-//    //이미지 유해성 검사
-//    public RsData<String> detectSafeSearchRemote(String imageUrl) throws IOException {
-//
-//        try (ImageAnnotatorClient vision = ImageAnnotatorClient.create()) {
-//
-//            // 원격 저장소(NCP Object Storage)의 URL 사용하여 이미지 데이터를 읽어옴
-//            URL url = new URL(imageUrl);
-//            try (InputStream in = url.openStream()) {
-//                byte[] data = IOUtils.toByteArray(in);
-//
-//                //URL 을 통해 이미지를 빌드
-//                ByteString imgBytes = ByteString.copyFrom(data);
-//                Image img = Image.newBuilder().setContent(imgBytes).build();
-//                Feature feat = Feature.newBuilder().setType(Feature.Type.SAFE_SEARCH_DETECTION).build();
-//                AnnotateImageRequest request =
-//                        AnnotateImageRequest.newBuilder().addFeatures(feat).setImage(img).build();
-//
-//                // 세이프 서치
-//                BatchAnnotateImagesResponse response = vision.batchAnnotateImages(
-//                        Collections.singletonList(request));
-//                List<AnnotateImageResponse> responses = response.getResponsesList();
-//
-//                for (AnnotateImageResponse res : responses) {
-//                    if (res.hasError()) {
-//                        System.out.format("Error: %s%n", res.getError().getMessage());
-//                        return RsData.of("F-1", "세이프서치 도중 오류가 발생하였습니다.");
-//                    }
-//
-//                    SafeSearchAnnotation safeSearchAnnotation = res.getSafeSearchAnnotation();
-//
-//                    //유해성 등급 => Unknown, Very Unlikely, Unlikely, Possible, Likely, and Very Likely
-//                    List<String> resultList = new ArrayList<>();
-//
-//                    resultList.add(safeSearchAnnotation.getAdult().toString());
-//                    resultList.add(safeSearchAnnotation.getMedical().toString());
-//                    resultList.add(safeSearchAnnotation.getAdult().toString());
-//                    resultList.add(safeSearchAnnotation.getViolence().toString());
-//                    resultList.add(safeSearchAnnotation.getRacy().toString());
-//
-//                    for (String result : resultList) {
-//
-//                        if (result.equals("POSSIBLE")
-//                                || result.equals("LIKELY")
-//                                || result.equals("VERY_LIKELY")) {
-//
-//                            return RsData.of("F-2", "유해할 확률이 높은 이미지 입니다.");
-//                        }
-//                    }
-//                }
-//            }
-//        }
-//        return RsData.of("S-1", "유해성 검사를 통과한 이미지 입니다.");
-//    }
+        try (ImageAnnotatorClient vision = ImageAnnotatorClient.create(visionAPISettings);) {
+            // 원격 저장소(NCP Object Storage)의 URL 사용하여 이미지 데이터를 읽어옴
+            URL url = new URL(imageUrl);
+            try (InputStream in = url.openStream()) {
+                byte[] data = IOUtils.toByteArray(in);
 
-    public String getPostDetailPhoto(String photoUrl){
+                // URL을 통해 이미지를 빌드
+                ByteString imgBytes = ByteString.copyFrom(data);
+                Image img = Image.newBuilder().setContent(imgBytes).build();
+                Feature feat = Feature.newBuilder().setType(Feature.Type.LABEL_DETECTION).build();
+                AnnotateImageRequest request =
+                        AnnotateImageRequest.newBuilder().addFeatures(feat).setImage(img).build();
+
+                // 세이프 서치
+                BatchAnnotateImagesResponse response = vision.batchAnnotateImages(
+                        Collections.singletonList(request));
+                List<AnnotateImageResponse> responseList = response.getResponsesList();
+
+                for (AnnotateImageResponse res : responseList) {
+                    if (res.hasError()) {
+                        System.out.format("Error: %s%n", res.getError().getMessage());
+                        return RsData.of("F-1", "오류가 발생하였습니다.");
+                    }
+
+                    SafeSearchAnnotation safeSearchAnnotation = res.getSafeSearchAnnotation();
+                    List<EntityAnnotation> labelAnnotations = res.getLabelAnnotationsList();
+
+                    // 세이프 서치 분석
+                    List<String> safeSearchResultList = new ArrayList<>();
+                    safeSearchResultList.add(safeSearchAnnotation.getAdult().toString());
+                    safeSearchResultList.add(safeSearchAnnotation.getMedical().toString());
+                    safeSearchResultList.add(safeSearchAnnotation.getAdult().toString());
+                    safeSearchResultList.add(safeSearchAnnotation.getViolence().toString());
+                    safeSearchResultList.add(safeSearchAnnotation.getRacy().toString());
+
+                    for (String result : safeSearchResultList) {
+                        if (result.equals("POSSIBLE")
+                                || result.equals("LIKELY")
+                                || result.equals("VERY_LIKELY")) {
+                            return RsData.of("F-2", "유해할 확률이 높은 이미지입니다.");
+                        }
+                    }
+
+                    // 라벨 검출
+                    for (EntityAnnotation annotation : labelAnnotations) {
+                        if (annotation.getDescription().contains("Food") && annotation.getScore() >= 0.7) {
+                            return RsData.of("S-1", "음식 이미지일 확률이 높습니다.");
+                        }
+                    }
+                }
+            }
+            return RsData.of("F-3", "음식 이미지가 아닐 확률이 높습니다. 다른 이미지를 사용해 주세요.");
+        }
+    }
+
+
+    public String getPostDetailPhoto(String photoUrl) {
 
         String[] split = photoUrl.split("calocheck/");
 
         StringBuilder sb = new StringBuilder();
-        String protocol = request.getScheme();
-
-        if(protocol.equals("http")){
-            sb.append("http://mxpijmgqueja17962851.cdn.ntruss.com/");
-        }else if(protocol.equals("https")){
-            sb.append("https://mxpijmgqueja17962851.cdn.ntruss.com/");
-        }
-
+        sb.append(s3ConfigProperties.getCdnUrl());
         sb.append(split[1]);
         sb.append("?type=m&w=500&h=500&quality=90&bgcolor=FFFFFF&extopt=3");
 
         return sb.toString();
     }
 
-    public List<String> getRecommendPhotoData(String[] recommendList){
-
-        String protocol = request.getScheme();
+    public List<String> getRecommendPhotoData(String[] recommendList) {
 
         List<String> imgList = new ArrayList<>();
 
-        for (String s : recommendList) {
+        for (String recommend : recommendList) {
 
             StringBuilder sb = new StringBuilder();
 
-            if (protocol.equals("http")) {
-                sb.append("http://mxpijmgqueja17962851.cdn.ntruss.com/recommendImg/");
-            } else if (protocol.equals("https")) {
-                sb.append("https://mxpijmgqueja17962851.cdn.ntruss.com/recommendImg/");
-            }
-
-            sb.append(s);
+            sb.append(s3ConfigProperties.getCdnUrl());
+            sb.append("recommendImg/");
+            sb.append(recommend);
             sb.append(".jpg?type=m&w=200&h=200&quality=90&bgcolor=FFFFFF&ttype=jpg&extopt=3");
 
             imgList.add(sb.toString());
